--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongoose": "^8.15.2"
   }
