--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongoose": "^8.15.2"
   }
 }
