--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
